# ContrastAgent

./: .eslintrc.js  .gitignore  .prettierrc.json  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tox.toml
apps/api/app/: main.py
apps/api/app/agent/: app.py  common_service_provider.py  main.py  utils.py
apps/api/app/api/: api.py  auth.py
apps/api/app/core/: __init__.py  auth.py  config.py  enums.py  setup.py
apps/api/app/crud/: analogous.py  color_range.py  crud_adaptor.py  helpers.py  locale_details.py  price.py  product.py  product_line.py  product_swatch.py  product_type.py  product_variant.py  tag.py  tier.py  types.py  user.py  vendor.py
apps/api/app/data/: locale_codes.json  supported_languages.py
apps/api/app/models/: __init__.py  analogous.py  associations.py  base.py  color_range.py  fields.py  locale_details.py  mixins.py  product.py  product_line.py  product_swatch.py  product_type.py  product_variant.py  tag.py  tier.py  user.py  vendor.py
apps/api/app/schemas/: analogous.py  category_filter.py  color_range.py  entity.template.py  healthcheck.py  locale_details.py  mixins.py  product.py  product_line.py  product_swatch.py  product_type.py  product_variant.py  tag.py  tier.py  user.py  vendor.py
apps/api/app/tests/: decorator_test.py
apps/api/scripts/: run_agent.sh
apps/api/src/crud/: __init__.py  product.py  product_type.py  vendor.py
apps/api/src/schemas/: __init__.py  product.py  product_type.py  vendor.py
apps/web/: index.html  (+3 more)
(+165 files in other folders)
