[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sean Bellows <seanbellows@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
