[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sean Bellows <seanbellows@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
supabase-py-async = "^2.5.6"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
numpy = "^2.2.4"
injector = "^0.22.0"
pydantic = "^2.11.1"
pillow = "^11.1.0"
arq = "^0.26.3"
fastapi-async-sqlalchemy = "^0.6.1"
fastapi-pagination = "^0.12.34"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
